ROS2/log/build_2024-10-24_10-20-52/uav_patrol/stderr.log
  File "/home/x650/UAV/ROS2/install/uav_patrol/lib/python3.10/site-packages/uav_patrol/drone_controller/drone_controller_3.py", line 157
    num_waypoints = 
                    ^
SyntaxError: invalid syntax

